# pybids-extension-template

./: README.md  setup.cfg
bids/ext/EXTENSION/: __init__.py
