# Find and replace EXTENSION with the name of your subpackage
# This file is intentionall minimal. You will almost certainly want to expand it.

[metadata]
name = pybids-EXTENSION
version = 0.0.1

[options]
install_requires =
    pybids >= 0.15
packages = find_namespace:

[options.packages.find]
include =
    bids.ext.EXTENSION
    bids.ext.EXTENSION.*
